syntax = "proto3";

package gateway.api.v1.user.userinfo;

import "google/api/annotations.proto";
option go_package = "vw_gateway/api/v1/user/userinfo;infov1";

service Userinfo {
    rpc Userinfo(UserinfoReq) returns (UserinfoResp) {
        option (google.api.http) = {
            get: "/api/v1/userinfo/{user_id}"
        };
    }

    rpc ModifyEmail(ModifyEmailReq) returns (ModifyEmailResp) {
        option (google.api.http) = {
            post: "/api/v1/userinfo/{user_id}/modifyEmail",
            body: "*"
        };
    }

    rpc ModifyPassword(ModifyPasswordReq) returns (ModifyPasswordResp) {
        option (google.api.http) = {
            post: "/api/v1/userinfo/{user_id}/modifyPassword",
            body: "*"
        };
    };

    rpc ModifyUserSignature(ModifySignatureReq) returns (ModifySignatureResp) {
        option (google.api.http) = {
            post: "/api/v1/userinfo/{user_id}/modifySignature",
            body: "*";
    };
}

rpc ForgetPassword(ForgetPasswordReq) returns (ForgetPasswordResp) {
    option (google.api.http) = {
        post: "/api/v1/userinfo/{user_id}/forgetPassword",
        body: "*";
};
}

rpc ModifyUsername(ModifyUsernameReq) returns (ModifyUsernameResp) {
    option (google.api.http) = {
        post: "/api/v1/userinfo/{user_id}/modifyUsername",
        body: "*";
};
}
}

message UserInfo {
    string user_name   = 1;
    string email       = 2;
    string signature   = 3;
    int32 shells       = 4;
    int32 cnt_fans     = 5;
    int32 cnt_follows  = 6;
    int32 cnt_videos   = 7;
    string avatar_path = 8;
    int32 gender       = 9;
    string birthday    = 10;
}

message CommonResp {
    int32 status   = 1;
    string message = 2;
}

message UserinfoReq {
    int64 user_id = 1;
}
message UserinfoResp {
    UserInfo user_info = 1;
    CommonResp common  = 2;
}

message ModifyEmailReq {
    int64 user_id     = 1;
    string email      = 2;
    string input_code = 3;  // the verify code that inputted by user
}
message ModifyEmailResp {
    string email      = 1;
    CommonResp common = 2;
}

message ModifyPasswordReq {
    int64 user_id       = 1;
    string old_password = 2;
    string new_password = 3;
}
message ModifyPasswordResp {
    CommonResp common = 1;
}

message ModifySignatureReq {
    int64 user_id    = 1;
    string signature = 2;
}
message ModifySignatureResp {
    string new_signature = 1;
    CommonResp common    = 2;
}

message ForgetPasswordReq {
    int64 user_id       = 1;
    string email        = 2;
    string new_password = 3;
    string input_code   = 4;
}
message ForgetPasswordResp {
    CommonResp common = 1;
}

message ModifyUsernameReq {
    int64 user_id       = 1;
    string new_username = 2;
}
message ModifyUsernameResp {
    string new_username = 1;
    CommonResp common   = 2;
}